--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - nmae: Install
+      - name: Install
         run : npm ci
       - name: Lint Tekshirish
         run : npm run lint
