--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,4 +18,6 @@ jobs:
       - name: Install
         run: npm ci
       - name: Testni Tekshirish
+        env: 
+          PORT: ${{secrets.PORT}}
         run: npm run test
