--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -21,6 +21,6 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v6
         with:
-          file: Dockerfile
+          file: DockerFile
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/ci_cdd:1.0
