--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,6 @@ jobs:
             fi
             npm install
             npm run build
-            pm2 restart ci_cd_app || pm2 start dist/main.js --name ci_cd_app
+            pm2 restart ci_cd || pm2 start dist/main.js --name ci_cd
           "
         shell: bash
